<resources>
    <string name="app_name">Diplicity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="games">Games</string>
    <string name="users">Users</string>
    <string name="my_started">My started</string>
    <string name="my_staging">My staging</string>
    <string name="my_finished">My finished</string>
    <string name="open">Open</string>
    <string name="started">Started</string>
    <string name="finished">Finished</string>
    <string name="top_rated">Top rated</string>
    <string name="top_hated">Top hated</string>
    <string name="network_error">Network error</string>
    <string name="loading_x">Loading %s</string>
    <string name="no_data_available">No data available</string>
    <string name="loading_x_games">Loading %s games</string>
    <string name="x_games">%s games</string>
    <string name="invalid_url">Invalid URL</string>
    <string name="api_url_must_end_with_slash">API URL must end with &quot;/&quot;</string>
    <string name="loading_x_y">Loading %1$s %2$s</string>
    <string name="x_y">%1$s %2$s</string>
    <string name="top_reliable">Top reliable</string>
    <string name="top_quick">Top quick</string>
    <string name="top_hater">Top hater</string>
    <string name="season_year_type">%1$s %2$d, %3$s</string>
    <string name="season_year_type_created">%1$s %2$d, %3$s - %4$s</string>
    <string name="x_players">%s players</string>
    <string name="rating">Rating</string>
    <string name="min_rating">Minimum rating</string>
    <string name="max_rating">Maximum rating</string>
    <string name="reliability">Reliability</string>
    <string name="quickness">Quickness</string>
    <string name="min_reliability">Minimum reliability</string>
    <string name="min_quickness">Minimum quickness</string>
    <string name="max_hated">Maximum hated</string>
    <string name="max_hater">Maximum hater</string>
    <string name="logging_in">Logging in</string>
    <string name="x_to_y">%1$s - %2$s</string>
    <string name="leaving_game">Leaving game</string>
    <string name="update_your_state">Something has changed on the server, reload your state.</string>
    <string name="client_misbehaved">The client misbehaved, please try later.</string>
    <string name="server_error">Server error, please try later.</string>
    <string name="joining_game">Joining game</string>
    <string name="updating">Updating</string>
    <string name="unknown_error">Unknown error.</string>
    <string name="more">more</string>
    <string name="phase_length_in_minutes">Phase length in minutes</string>
    <string name="variant">Variant</string>
    <string name="variant_label">&lt;b&gt;Variant:&lt;/b&gt; %s</string>
    <string name="description">Description</string>
    <string name="create_game">Create game</string>
    <string name="creating_game">Creating game</string>
    <string name="loading_user_stats">Loading user stats</string>
    <string name="must_be_below_your_rating_x">Must be below your rating (%s)</string>
    <string name="minimum_rating_must_be_below_your_rating_x">Minimum rating must be below your rating (%1$.2f)</string>
    <string name="maximum_rating_must_be_above_your_rating_x">Maximum rating must be above your rating (%1$.2f)</string>
    <string name="minimum_reliability_must_be_below_your_reliability_x">Minimum reliability must be below your reliability (%1$.2f)</string>
    <string name="minimum_quickness_must_be_below_your_quickness_x">Minimum quickness must be below your quickness (%1$.2f)</string>
    <string name="maximum_hated_must_be_above_your_hated_x">Maximum hated must be above your hated (%1$.2f)</string>
    <string name="maximum_hater_must_be_above_your_hater_x">Maximum hater must be above your hater (%1$.2f)</string>
    <string name="title_activity_game">GameActivity</string>
    <string name="map">Map</string>
    <string name="desc_season_year_type">%2$s %3$d, %4$s: %1$s</string>
    <string name="loading_start_state">Loading start state</string>
    <string name="loading_options">Loading options</string>
    <string name="cancel">Cancel</string>
    <string name="loading_state">Loading state</string>
    <string name="removing_order">Removing order</string>
    <string name="saving_order">Saving order</string>
    <string name="orders">Orders</string>
    <string name="loading_orders">Loading orders</string>
    <string name="nation_order">%1$s: %2$s</string>
    <string name="phases">Phases</string>
    <string name="loading_phases">Loading phases</string>
    <string name="nation_order_result">%1$s: %2$s: %3$s</string>
    <string name="press">Press</string>
    <string name="loading_channels">Loading channels</string>
    <string name="members_unread_total">%1$s (%2$s/%3$s)</string>
    <string name="title_activity_press">PressActivity</string>
    <string name="message">Message</string>
    <string name="loading_messages">Loading messages</string>
    <string name="sending_message">Sending message</string>
    <string name="x_">%s:</string>
    <string name="create">Create</string>
    <string name="_nation_">(%s)</string>
    <string name="phase_result">Phase result</string>
    <string name="game_result">Game result</string>
    <string name="loading_phase_result">Loading phase result</string>
    <string name="nmr_members">NMR</string>
    <string name="nmr">NMR</string>
    <string name="active">Active</string>
    <string name="ready">Ready</string>
    <string name="solo_winner">Solo winner</string>
    <string name="dias_members">DIAS</string>
    <string name="dias">DIAS</string>
    <string name="scores">Scores</string>
    <string name="scs_score">%1$s SCs, %2$s points</string>
    <string name="eliminated">Eliminated</string>
    <string name="loading_game_result">Loading game result</string>
    <string name="phase_settings">Phase settings</string>
    <string name="game_settings">Game settings</string>
    <string name="variant_info">Variant information</string>
    <string name="variant_name">Name:</string>
    <string name="variant_author">Author:</string>
    <string name="variant_version">Version:</string>
    <string name="variant_description">Description:</string>
    <string name="variant_rules">Rules:</string>
    <string name="_scs">%d SCs</string>
    <string name="_points">%s points</string>
    <string name="loading_phase_settings">Loading phase settings</string>
    <string name="ready_to_resolve">Ready to resolve</string>
    <string name="wants_dias">Wants DIAS</string>
    <string name="on_probation">On probation</string>
    <string name="updating_phase_state">Updating phase state</string>
    <string name="DIAS">DIAS</string>
    <string name="probation">Probation</string>
    <string name="rdy">RDY</string>
    <string name="_messages">%1s msgs</string>
    <string name="_unread">%1d unread</string>
    <string name="float_format">%1$.2f</string>
    <string name="untitled">Untitled</string>
    <string name="desc_season_year_type_deadline">(%5$s) %2$s %3$d, %4$s: %1$s</string>
    <string name="loading_game_settings">Loading game settings</string>
    <string name="muted">Muted</string>
    <string name="updating_game_state">Updating game state</string>
    <string name="update">Update</string>
    <string name="channels">Channels</string>
    <string name="members">Members</string>
    <string name="phase_length_must_be_less_than_30_days">Phase length must be less than 30 days</string>
    <string name="local_development_mode">Local development mode</string>
    <string name="deadline_warning_debug">Debug deadline alarms</string>
    <string name="debug_deadline_warnings">Make warnings about deadlines appear 5 seconds after loading games, instead of the configured time ahead of deadline.</string>
    <string name="connect_to_localhost_instead_of_cloud_service">Connect to localhost:8080 instead of cloud service</string>
    <string name="local_development_fake_id">Local development fake ID</string>
    <string name="development">Development</string>
    <string name="notifications">Notifications</string>
    <string name="email_notifications">Email notifications</string>
    <string name="send_notifications_to_your_registered_email">Send notifications to your registered email address</string>
    <string name="loading_settings">Loading settings</string>
    <string name="updating_settings">Updating settings</string>
    <string name="push_notifications">Push notifications</string>
    <string name="push_notifications_to_your_device">Push notifications to your device</string>
    <string name="dysfunctional_fcm_service">Dysfunctional FCM service?</string>
    <string name="the_game_has_a_new_phase">The game has a new phase.</string>
    <string name="push_notifications_pref_key">push_notifications_pref_key</string>
    <string name="email_notifications_pref_key">email_notifications_pref_key</string>
    <string name="local_development_mode_pref_key">local_development_mode_pref_key</string>
    <string name="deadline_warning_debug_pref_key">deadline_warning_debug_pref_key</string>
    <string name="local_development_mode_fake_id_pref_key">local_development_mode_fake_id_pref_key</string>
    <string name="you_can_build_n_this_phase">You can build %s this phase.</string>
    <string name="you_have_to_disband_n_this_phase">You have to disband %s this phase.</string>
    <string name="started_games">Started games</string>
    <string name="finished_games">Finished games</string>
    <string name="solo_wins">Solo wins</string>
    <string name="draws">Draws</string>
    <string name="eliminations">Eliminations</string>
    <string name="dropped_games">Dropped games</string>
    <string name="ready_phases">Ready phases</string>
    <string name="active_phases">Active phases</string>
    <string name="nmr_phases">NMR phases</string>
    <string name="owned_bans">Owned bans</string>
    <string name="shared_bans">Shared bans</string>
    <string name="hated">Hated</string>
    <string name="hater">Hater</string>
    <string name="banned">Banned</string>
    <string name="bans">Bans</string>
    <string name="as_banner">As banner</string>
    <string name="as_banned">As banned</string>
    <string name="loading_bans">Loading bans</string>
    <string name="login_failed">Login failed</string>
    <string name="alias">Alias</string>
    <string name="updating_membership">Updating membership</string>
    <string name="version">Version</string>
    <string name="app_version_pref_key">app_version_pref_key</string>
    <string name="game_id_pref_key">game_id_pref_key</string>
    <string name="game_id">Game ID</string>
    <string name="game_id_copied_to_clipboard">Game ID copied to clipboard.</string>
    <string name="rss_link_pref_key">rss_link_pref_key</string>
    <string name="rss_link">RSS Link</string>
    <string name="rss_link_summary">Copy link for this game\'s RSS feed</string>
    <string name="rss_link_copied_to_clipboard">RSS feed link copied to clipboard.</string>
    <string name="rss_link_x">https://diplicity-engine.appspot.com/Rss?gameID=%s&amp;phaseLimit=8</string>
    <string name="draw">Draw</string>
    <string name="DRAW">DRAW</string>
    <string name="all_press_becomes_public">Warning: All press becomes public when the game finishes!</string>
    <string name="x_s_finished">%s\'s finished</string>
    <string name="staging">Staging</string>
    <string name="loading_game">Loading game</string>
    <string name="game_link_copied_to_clipboard">Game link copied to clipboard</string>
    <string name="game_link">Game link</string>
    <string name="game_link_x">https://diplicity-engine.appspot.com/Game/%s</string>
    <string name="_games">games</string>
    <string name="alarms">Alarms</string>
    <string name="forum">Forum</string>
    <string name="error_log">Error log</string>
</resources>