<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_bans"
        android:orderInCategory="200"
        android:title="@string/bans"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_alarms"
        android:orderInCategory="300"
        android:title="@string/alarms"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_forum"
        android:orderInCategory="400"
        android:title="@string/forum"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_error_log"
        android:orderInCategory="500"
        android:title="@string/error_log"
        app:showAsAction="never" />
</menu>
