<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/ic_map_black_24dp"
            android:title="@string/map" />
        <item
            android:id="@+id/nav_orders"
            android:icon="@drawable/ic_assignment_black_24dp"
            android:title="@string/orders" />
        <item
            android:id="@+id/nav_phases"
            android:icon="@drawable/ic_format_list_numbered_black_24dp"
            android:title="@string/phases" />
        <item
            android:id="@+id/nav_press"
            android:icon="@drawable/ic_contacts_black_24dp"
            android:title="@string/press" />
    </group>

</menu>
