<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <se.oort.diplicity.UserView
        android:id="@+id/user"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <CheckBox
        android:id="@+id/ready_to_resolve"
        android:text="@string/ready_to_resolve"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@id/user"
        android:layout_toRightOf="@id/user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <CheckBox
        android:id="@+id/wants_dias"
        android:text="@string/wants_dias"
        android:layout_below="@id/ready_to_resolve"
        android:layout_toEndOf="@id/user"
        android:layout_toRightOf="@id/user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <CheckBox
        android:id="@+id/on_probation"
        android:text="@string/on_probation"
        android:layout_below="@id/wants_dias"
        android:layout_toEndOf="@id/user"
        android:layout_toRightOf="@id/user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</RelativeLayout>