<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:id="@+id/bans_dialog_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/as_banner"
            android:gravity="center_horizontal"
            android:textColor="?android:attr/textColorPrimary" />

        <TextView
            android:id="@+id/as_banner_no_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/no_data_available"
            android:gravity="center_horizontal"/>

        <LinearLayout
            android:id="@+id/hater_list"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/as_banned"
            android:gravity="center_horizontal"
            android:textColor="?android:attr/textColorPrimary" />

        <TextView
            android:id="@+id/as_banned_no_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/no_data_available"
            android:gravity="center_horizontal"/>

        <LinearLayout
            android:id="@+id/hated_list"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

</ScrollView>